Fixed table layout issue on mobile. Added handlebar partials. Removed JS pre-loading of cards in favor of hbs templating. Added hbs helper for setting values if they exist or relying on a default. Added alternate method for appending new cards to DOM.

--- a/src/_scss/_body.scss
+++ b/src/_scss/_body.scss
@@ -240,6 +240,19 @@ table.dataTable > thead .sorting_desc_disabled::before {
     width: 100%;
     table-layout: fixed;
   }
+  @media screen and (max-width: 768px) { // Bootstrap's mobile view breakpoint
+    tbody{
+      display: inherit;
+      height: inherit;
+      max-height:inherit;
+      overflow: visible;
+    }
+    thead, tbody tr{
+      display: inherit;
+      width: inherit;
+      table-layout: inherit;
+    }
+  }
 }
 
 .row--lightBorderTop{
